--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint --debug src/",
     "lint:fix": "eslint --debug src/ --fix",
     "format": "prettier ./src --write",
     "preview": "vite preview",
@@ -43,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "prettier": "^3.2.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
